--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,7 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.5);
+  margin-top: 20px;
 }
 .footer-links {
   display: flex;
@@ -15,6 +16,7 @@
   color: black;
   opacity: 0.15;
   text-decoration: none;
+  align-items: center;
   font-size: 24px;
   padding: 0px 10px;
 }
