--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,20 +1,20 @@
 <div class="container">
-    <div class="dash-title text-center">
-        <h2><%= @current_user.email.split("@")[0].capitalize %>'s Dashboard</h2>
-    </div>
+  <div class="dash-title text-center">
+      <h2><%= @current_user.email.split("@")[0].capitalize %>'s Dashboard</h2>
+  </div>
 
-    <div class="head-con">  
-      <div class="tabs">
-          <a href="#" class="guest tab tab-guest active">My trips</a>
-          <a href="#" class="host tab tab-host">My rentings</a>
-      </div>
-      <%= link_to "Need another car?", cars_path, class: "btn btn-success" %>
+  <div class="head-con">  
+    <div class="tabs" id="tabs">
+      <h2 class="x guest tab tab-guest active">My trips</h2>
     </div>
+    <%= link_to "Need another car?", cars_path, class: "btn btn-success" %>
+  </div>
 
     <div class="row inbox text-center" id="trip">
       <% @bookings.each do |booking| %>
         <div class="message">
         <!-- Code your message here -->
+          <%= link_to booking.car.brand + " " + booking.car.model, booking.car, class: "my-car" %>
           <div class="message_name">
             <h6 class="border-bottom">Pickup Address:</h6>
             <p><%= booking.car.location %></p>
@@ -42,28 +42,34 @@
       <% end %>       
     </div>
 
+    <div class="head-con">  
+      <div class="tabs" id="tabs">
+        <h2 class="x host tab tab-host active">My rentings</h2>
+      </div>
+    </div>
+
     <div class="row inbox-host inbox" id="host">
       <% my_hostings = Booking.hostings(current_user) %>
       <% my_hostings.each do |booking| %>
       <div class="message text-center">
               <!-- <img src="https://kitt.lewagon.com/placeholder/users/lionel-k" class="avatar_sm"> -->
         <div class="message_name">
-          <h5 class="border-bottom">Name:</h5>
+          <h6 class="border-bottom">Name:</h6>
           <h3 ><%= booking.user.email.split("@")[0].capitalize %></h3>
         </div>
 
         <div class="dates">
-          <h5 class="border-bottom">Date:</h5>
+          <h6 class="border-bottom">Date:</h6>
           <p><%= booking.check_in_date.strftime('%Y-%m-%d') %>   -   <%= booking.check_out_date.strftime('%Y-%m-%d') %></p>
         </div>
 
         <div class="guests">
-          <h5 class="border-bottom">Guest:</h5>
+          <h6 class="border-bottom">Guest:</h6>
           <p><%= booking.number_of_guest %></p>
         </div>
 
         <div>
-          <h5 class="border-bottom">Total:</h5>
+          <h6 class="border-bottom">Total:</h6>
           <p class="price"><%= booking.total_price %>€</p>
         </div>
 
@@ -72,23 +78,22 @@
             <h3 class="accepted"><%= "Accepted" %></h3>
           <% else %>
             <h3 class="declined"><%= "Pending" %></h3>
-           <% end %>
-          </div>
-
-          <div class="message_body">
-            <%= link_to "Accept!", validate_booking_path(booking, status: 'accepted'), class: "btn greenbtn btn-success" %>
-            <p></p>
-            <%= link_to "Decline", validate_booking_path(booking, status: 'declined'), class: "btn btn-danger" %>
-          </div>
+          <% end %>
         </div>
-      <% end %>
-    </div>
 
-    
-    <div class="invite-content">
-      <p><strong>50€</strong> credit for your next trip!</p>
-      <p>Share with your friends the Treehouse code: <strong>TH<%= @current_user.email.split("@")[0].capitalize %><%= @current_user.id %></strong></p>
-      <%= link_to ' Share on <i class="fab fa-facebook" aria-hidden="true"></i>'.html_safe, 'https://www.facebook.com/', class: "btn btn-success", target:"_blank" %>
-    </div>
-
+        <div class="message_body">
+          <%= link_to "Accept!", validate_booking_path(booking, status: 'accepted'), class: "btn greenbtn btn-success" %>
+          <p></p>
+          <%= link_to "Decline", validate_booking_path(booking, status: 'declined'), class: "btn btn-danger" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <br>
+  <br>
+  <div class="invite-content">
+    <p><strong>50€</strong> credit for your next trip!</p>
+    <p>Share with your friends the Treehouse code: <strong>TH<%= @current_user.email.split("@")[0].capitalize %><%= @current_user.id %></strong></p>
+    <%= link_to ' Share on <i class="fab fa-facebook" aria-hidden="true"></i>'.html_safe, 'https://www.facebook.com/', class: "btn btn-success", target:"_blank" %>
+  </div>
 </div>
