--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -12,7 +12,7 @@
                             <%= f.input :description %>
                             <%= f.input :location, label: "Full Address" %>
                             <%= f.input :category,
-                                collection: ["Compact Car", "Family Car", "Sports Car", "All-round"]
+                                collection: ["compact city", "family car", "sports car", "all-rounder"]
                             %>
                             <%= f.input :price_per_day, label: "Price Per Day (€)" %>
                             <%= f.input :number_of_seat, collection: [ 1 ,2 ,3, 4 ] %>
