--- a/app/assets/stylesheets/components/_dashboard-tabs.scss
+++ b/app/assets/stylesheets/components/_dashboard-tabs.scss
@@ -8,6 +8,10 @@
   background-color: white;
 }
 
+.container {
+  margin: 15px auto !important;
+}
+
 .head-con {
   display: flex;
   align-items: center;
@@ -35,18 +39,16 @@ margin: 0 auto;
   font-size: 30px;
   top: 10px;
   left: 10px;
+  margin-top: 30px;
 }
 
 .fa-eur {
   font-size: 40px;
 }
 
-
-
 .invisible {
   display: none;
 }
-
 
 .message {
   /* Your turn to design a flexbox message */
@@ -80,6 +82,18 @@ margin: 0 auto;
   text-decoration: none;
 }
 
+.message {
+  margin-bottom: 15px !important;
+  background-color: white;
+}
+
+#trip {
+  background-color: #F4F4F4 !important;
+}
+
+#host {
+  background-color: #F4F4F4;
+}
 
 .tab.active {
   opacity: 1;
@@ -89,3 +103,17 @@ margin: 0 auto;
   border-bottom: 5px solid #119cab;
   text-decoration: none;
 }
+
+.my-car {
+  text-decoration: none !important;
+  font-size: 1.7em;
+}
+
+.declined {
+  color: $red !important;
+}
+
+.accepted {
+  color: $green !important;
+}
+
