--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,10 @@
 <div class="footer">
   <div class="footer-copyright">
+    <p>
+    © Copyright 2020 Team Sustainability: App made with <i class="fa fa-heart"></i>
     <br>
-    © Copyright 2020 Team Sustainability: App made with <i class="fa fa-heart"></i> <br>
     All rights reserved.
+    </p>
   </div>
   <div>
     <h6>Collaborators</h6>
