--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -93,7 +93,7 @@
   <br>
   <div class="invite-content">
     <p><strong>50€</strong> credit for your next trip!</p>
-    <p>Share with your friends the Treehouse code: <strong>TH<%= @current_user.email.split("@")[0].capitalize %><%= @current_user.id %></strong></p>
+    <p>Share with your friends the ECS code: <strong>ECS<%= @current_user.email.split("@")[0].capitalize %><%= @current_user.id %></strong></p>
     <%= link_to ' Share on <i class="fab fa-facebook" aria-hidden="true"></i>'.html_safe, 'https://www.facebook.com/', class: "btn btn-success", target:"_blank" %>
   </div>
 </div>
