--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -2,21 +2,23 @@
   <div class="results-container text-center">
     <h3>Choose among amazing electric cars</h3>
 
-    <%= form_tag cars_path, method: :get do %>
-      <div class="container-search algolia">
-      <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "Type in your favorite E-Car"
-      %>
-      <%= text_field_tag :location,
-      params[:location],
-      class: "form-control",
-      placeholder: "Where do we want to go now?" 
-      %>
-      <%= submit_tag "Search", class: "btn btn-warning" %>
-      </div>
-    <% end %>
+    <div class="pg-search">
+      <%= form_tag cars_path, method: :get do %>
+        <div class="container-search algolia">
+        <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Type in your favorite E-Car"
+        %>
+        <%= text_field_tag :location,
+        params[:location],
+        class: "form-control",
+        placeholder: "Where do we want to go now?" 
+        %>
+        <%= submit_tag "Search", class: "btn btn-warning" %>
+        </div>
+      <% end %>
+    </div>
 
     <p class="text-left"><%= @cars.length < 2 ? "#{ @cars.length } result" : "#{ @cars.length } results" %></p>
 
