--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -4,7 +4,7 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="formular">
-                        <h1 class="text-center">Offer your e-car</h1>
+                        <h1 class="text-center">Offer your E-Car</h1>
 
                         <%= simple_form_for @car, :html => { class: 'form-checkbox-inline' } do |f| %>
                             <%= f.input :brand %>
