--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -48,4 +48,6 @@
   </div>
 </div>
 
-<%= link_to 'Back to cars', cars_path, class: "btn btn-success buttOn" %>
+<div class="back-btn">
+  <%= link_to 'Back to cars', cars_path, class: "btn btn-success buttOn" %>
+</div>
